Times out messages; corrects color contrast lack

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,9 +2,17 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #100de1;
+    background-color: #201dde;
 }
 
-* {
+h1, h2, h3, th, td {
     color: white;
+}
+
+html, body, input {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
+
+#id {
+    color: black;
 }
